added twitter account

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ owner:
   github: EdwinTh
   stackexchange: http://stackoverflow.com/users/2119315/edwin
   linkedin: edwin-thoen-3139a131?trk=hp-identity-name
+  twitter: edwin_thoen
 
 # will place Disqus at every post automatically
 comments: true
